Run core PHPUnit tests and make pass
* Update `mediawiki/mediawiki-codesniffer` to 45.0.0
* add missing `action-fork` messages
* convert a `wfLogWarning()` to `wfDebugLog()` when the extension is not
configured, since the warning causes the core ContentHandlerFunctionalTest test
to fail
* add missing alias for Special:Mirror
* create indexes for `remote_page` and `remote_redirect` tables in dedicated
statements rather than as part of the corresponding `CREATE TABLE`

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -11,6 +11,7 @@
 	"logentry-delete-mirror": "$1 {{GENDER:$2|restored}} mirrored page $3",
 	"logentry-import-fork": "$1 {{GENDER:$2|imported}} mirrored page $3 from $4",
 	"right-fork": "Create local copies of mirrored pages",
+	"action-fork": "create local copies of mirrored pages",
 	"wikimirror-action-fork": "Fork",
 	"wikimirror-action-mirror": "Mirror",
 	"wikimirror-api-error": "An unrecoverable error has occurred with the remote wiki's API.",
